Colaboratory kullanılarak oluşturuldu

--- a/insertion_sort.ipynb
+++ b/insertion_sort.ipynb
@@ -6,7 +6,7 @@
       "name": "insertion_sort.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNvSNvRFyW5DEAgg0Hh2B4g",
+      "authorship_tag": "ABX9TyMh2v83pDhucke8MoO+at6S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Insertion Sort Projesi \n",
-        "\n"
+        "# ***Insertion Sort Projesi ***\n"
       ],
       "metadata": {
         "id": "PM8YuglLa1bv"
@@ -41,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Proje 1"
+        "**Proje 1**"
       ],
       "metadata": {
         "id": "dAEbIhtGa6Z5"
