Colaboratory kullanılarak oluşturuldu

--- a/insertion_sort.ipynb
+++ b/insertion_sort.ipynb
@@ -6,7 +6,7 @@
       "name": "insertion_sort.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMh2v83pDhucke8MoO+at6S",
+      "authorship_tag": "ABX9TyM6L/jJqg3yEXMlkcutO5oN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
         "\n",
         "▶[2,16,18,22,27,6]\n",
         "\n",
-        "▶[2,6,16,18,22,**27**]\n",
+        "▶[2,6,16,18,22,27]\n",
         "```\n",
         "\n"
       ],
@@ -100,11 +100,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**3.Time Complexity: Average case: Aradığımız sayının ortada olması,\n",
+        "**3.**\n",
         "\n",
-        "Worst case: Aradığımız sayının sonda olması, \n",
+        "**Time Complexity: Average case: Aradığımız sayının ortada olması,**\n",
         "\n",
-        "Best case: Aradığımız sayının dizinin en başında olması.**\n"
+        "**Worst case: Aradığımız sayının sonda olması, **\n",
+        "\n",
+        "**Best case: Aradığımız sayının dizinin en başında olması.**\n"
       ],
       "metadata": {
         "id": "EnXuH5YKs0m2"
